--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "E-Commerce Website [MERN stack]",
   "main": "server.js",
   "scripts": {
-    "test": "node backend/server"
+    "test": "node backend/server",
+    "server" : "nodemon backend/server",
+    "client" : "npm start --prefix frontend",
+    "dev" : "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -18,5 +21,9 @@
   "homepage": "https://github.com/Yashas88/mac-project#readme",
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "concurrently": "^7.1.0",
+    "nodemon": "^2.0.16"
   }
 }
