--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "E-Commerce Website [MERN stack]",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "node backend/server",
     "server": "nodemon backend/server",
@@ -20,8 +21,10 @@
   },
   "homepage": "https://github.com/Yashas88/mac-project#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.3"
   },
   "devDependencies": {
     "concurrently": "^7.1.0",
